
<resources>
    <string name="app_name">Archo Music</string>
    <string name="song_title_null">Untitled</string>
    <string name="song_artist_null">Unknown Artist</string>
    <string name="lyrics_editor_title">Lyrics Editor</string>
    <string name="lyrics_editor_input_hint">Write some lyrics...</string>
    <string name="about_description">Made by GianXD with ❤️</string>
    <string name="about_description2">sus amogus?</string>
    <string name="about_description3">Most poggest music player made!</string>
    <string name="about_description4">I don\'t like chines in my land!</string>
    <string name="about_description5">Who likes Linux here?</string>
    <string name="about_description6">Made with bare hands!</string>
    <string name="about_description7">Free open-source music player!</string>
    <string name="about_description8">Everybody gangsta till the cake was a lie!</string>
    <string name="about_description9">Minecraft??</string>
    <string name="about_description10">I prefer Linux than Windows!</string>
    <string name="about_title">ARcho</string>
    <string name="splash_title">ARcho</string>
    <string name="about_youtube_title">YouTube</string>
    <string name="about_twitter_title">Twitter</string>
    <string name="about_discord_title">Discord</string>
    <string name="about_github_title">GitHub</string>
    <string name="about_licenses_title">License</string>
    <string name="about_policy_title">Privacy Policy</string>
    <string name="about_build_version">build 5.18_android</string>
    <string name="debug_title">Error</string>
    <string name="debug_description">An unknown error was occurred.</string>
    <string name="debug_error_log">An error was occurred during cheems bruh moment poggers champ bruh bruh bruh.</string>
    <string name="debug_btn_close">Close</string>
    <string name="local_stream_title">ARcho</string>
    <string name="intent_filter_title">ARcho</string>
    <string name="lyrics_title">Lyrics</string>
    <string name="lyrics_null">Nothing to show lyrics.</string>
    <string name="menu_title">Menu</string>
    <string name="profile_name_null">User</string>
    <string name="menu_live_stream_title">Live streaming</string>
    <string name="menu_visualizer_title">Visualizer</string>
    <string name="menu_settings_title">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="song_opts_title">Song Options</string>
    <string name="song_opts_rename_title">Rename</string>
    <string name="song_opts_lyrics_title">Lyrics</string>
    <string name="song_opts_share_title">Share</string>
    <string name="song_opts_more_info_title">More information</string>
    <string name="song_opts_remove_title">Remove from library</string>
    <string name="song_opts_title_description">Do you want to remove song from your library?</string>
    <string name="song_opts_remove_permanent">Also delete from device</string>
    <string name="song_opts_remove_btn_remove">Remove</string>
    <string name="song_opts_remove_btn_cancel">Cancel</string>
    <string name="song_opts_rename_song_name_title">Song title</string>
    <string name="song_opts_rename_song_name_input_hint">Enter song title</string>
    <string name="song_opts_rename_song_artist_title">Artist name</string>
    <string name="song_opts_rename_song_artist_input_hint">Enter artist name</string>
    <string name="song_opts_rename_filename_title">Filename</string>
    <string name="song_opts_rename_filename_input_hint">Enter song filename</string>
    <string name="song_opts_rename_btn_confirm">Confirm</string>
    <string name="song_opts_rename_btn_cancel">Cancel</string>
    <string name="recyclerview_list_empty_msg">No songs found.</string>
    <string name="settings_category1">General</string>
    <string name="settings_category2">Appearance</string>
    <string name="settings_category3"><![CDATA[Audio & Performance]]></string>
    <string name="settings_note">More options will come soon!</string>
    <string name="settings_disable_ads">Opt out of ads</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_disable_anim">Disable animations</string>
    <string name="settings_background_play">Play song while in background</string>
    <string name="settings_btn_clear_data"><![CDATA[Reset user data & config]]></string>
    <string name="create_a_profile_icon_title">Set profile picture</string>
    <string name="create_a_profile_icon_input_hint">Enter specified path or URL here</string>
    <string name="create_a_profile_icon_btn_finish">Finish</string>
    <string name="create_a_profile_icon_btn_cancel">Cancel</string>
    <string name="create_a_profile_title">Edit profile</string>
    <string name="create_a_profile_input_hint">Enter your name here...</string>
    <string name="create_a_profile_btn_finish">Done</string>
    <string name="introduction_title">Welcome to Archo Music!</string>
    <string name="introduction_quote">Fast. Optimized. Open-source.</string>
    <string name="introduction_description">Greetings! Welcome to Archo Music. Listen to your favorite songs inside your phone and feel the beat anytime!</string>
    <string name="introduction_btn_close">Close</string>
    <string name="live_stream_link_title">Live Streaming</string>
    <string name="live_stream_link_input_hint">Enter stream link here</string>
    <string name="live_stream_link_btn_join">Join Stream</string>
    <string name="live_stream_link_obtain_stream">Get new stream link</string>
    <string name="ext_browser_loading_webtitle">Loading..</string>
    <string name="ext_browser_loading_weburl">Loading..</string>
</resources>
