<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:background="@android:color/transparent"
		android:orientation="vertical">
		<TextView
			android:id="@+id/title"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/song_opts_rename_title"
			android:textSize="18sp"
			android:textColor="#03A9F4"/>
		<LinearLayout
			android:id="@+id/line"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#03A9F4"
			android:orientation="horizontal"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/song_name_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_rename_song_name_title"
				android:textSize="11sp"
				android:textColor="#03A9F4" />
			<EditText
				android:id="@+id/song_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:background="#EEEEEE"
				android:textSize="12sp"
				android:textColor="#000000"
				android:hint="@string/song_opts_rename_song_name_input_hint"
				android:textColorHint="#607D8B"
				android:singleLine="true"
				android:imeOptions="actionDone"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/artist_name_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_rename_song_artist_title"
				android:textSize="11sp"
				android:textColor="#03A9F4" />
			<EditText
				android:id="@+id/artist_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:background="#EEEEEE"
				android:textSize="12sp"
				android:textColor="#000000"
				android:hint="@string/song_opts_rename_song_artist_input_hint"
				android:textColorHint="#607D8B"
				android:singleLine="true"
				android:imeOptions="actionDone"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/filename_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_rename_filename_title"
				android:textSize="11sp"
				android:textColor="#03A9F4" />
			<EditText
				android:id="@+id/filename"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:background="#EEEEEE"
				android:textSize="12sp"
				android:textColor="#000000"
				android:hint="@string/song_opts_rename_filename_input_hint"
				android:textColorHint="#607D8B"
				android:singleLine="true"
				android:imeOptions="actionDone"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/aaa"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				android:id="@+id/confirm"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:padding="8dp"
				android:background="#03A9F4"
				android:text="@string/song_opts_rename_btn_confirm"
				android:textSize="12sp"
				android:textColor="#FFFFFF"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/cancel"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:background="#03A9F4"
				android:text="@string/song_opts_rename_btn_cancel"
				android:textSize="12sp"
				android:textColor="#FFFFFF"
				android:layout_weight="1"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
