<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:orientation="vertical">
		<TextView
			android:id="@+id/title"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/song_opts_remove_title"
			android:textSize="18sp"
			android:textColor="#03A9F4"/>
		<LinearLayout
			android:id="@+id/line"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#03A9F4"
			android:orientation="horizontal"/>
		<TextView
			android:id="@+id/desc"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/song_opts_title_description"
			android:textSize="12sp"
			android:textColor="#000000"/>
		<CheckBox
			android:id="@+id/delete_song"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/song_opts_remove_permanent"
			android:textSize="12sp"
			android:textColor="#F44336"/>
		<LinearLayout
			android:id="@+id/aaa"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				android:id="@+id/remove"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:background="#03A9F4"
				android:text="@string/song_opts_remove_btn_remove"
				android:textSize="12sp"
				android:textColor="#FFFFFF"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/cancel"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:background="#03A9F4"
				android:text="@string/song_opts_remove_btn_cancel"
				android:textSize="12sp"
				android:textColor="#FFFFFF"
				android:layout_weight="1"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
