<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:orientation="vertical">
		<TextView
			android:id="@+id/title"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/debug_title"
			android:textSize="18sp"
			android:textColor="#03A9F4"/>
		<TextView
			android:id="@+id/warning"
			android:focusable="false"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/debug_description"
			android:textSize="12sp"
			android:textColor="#03A9F4"
			android:alpha="0.7"/>
		<LinearLayout
			android:id="@+id/line"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#03A9F4"
			android:orientation="horizontal"/>
		<TextView
			android:id="@+id/log"
			android:focusable="false"
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_marginTop="8dp"
			android:padding="8dp"
			android:background="#EEEEEE"
			android:text="@string/debug_error_log"
			android:textSize="12sp"
			android:textColor="#000000"
			android:alpha="0.5"
			android:textIsSelectable="true"/>
		<Button
			android:id="@+id/close"
			android:focusable="false"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:padding="8dp"
			android:background="#03A9F4"
			android:text="@string/debug_btn_close"
			android:textSize="12sp"
			android:textColor="#FFFFFF"/>
	</LinearLayout>
</LinearLayout>
