<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_extbrowser_back_key"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:text="Settings"
                android:textColor="#03A9F4"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/general_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/settings_category1"
                android:textColor="#03A9F4"
                android:textSize="11sp"
                android:typeface="normal" />

            <CheckBox
                android:id="@+id/disable_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="8dp"
                android:text="@string/settings_disable_ads" />

            <TextView
                android:id="@+id/appearance_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/settings_category2"
                android:textColor="#03A9F4"
                android:textSize="11sp"
                android:typeface="normal" />

            <CheckBox
                android:id="@+id/dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="8dp"
                android:text="@string/settings_dark_mode" />

            <CheckBox
                android:id="@+id/disable_anim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="8dp"
                android:text="@string/settings_disable_anim" />

            <TextView
                android:id="@+id/audio_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/settings_category3"
                android:textColor="#03A9F4"
                android:textSize="11sp"
                android:typeface="normal" />

            <CheckBox
                android:id="@+id/background_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="8dp"
                android:text="@string/settings_background_play" />

            <TextView
                android:id="@+id/other_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Other"
                android:textColor="#03A9F4"
                android:textSize="11sp"
                android:typeface="normal" />

            <CheckBox
                android:id="@+id/capture_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="8dp"
                android:text="Capture error logs" />

            <Button
                android:id="@+id/clear_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="#03A9F4"
                android:textColor="#FFFFFF"
                android:text="@string/settings_btn_clear_data" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>