<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:orientation="vertical">
		<TextView
			android:id="@+id/title"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/about_title"
			android:textSize="18sp"
			android:textColor="#03A9F4"/>
		<TextView
			android:id="@+id/author"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/about_description"
			android:textSize="12sp"
			android:textColor="#000000"
			android:alpha="0.7"/>
		<LinearLayout
			android:id="@+id/line"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#03A9F4"
			android:orientation="horizontal"/>
		<LinearLayout
			android:id="@+id/youtube"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/youtube_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_about_youtube"
				android:scaleType="fitCenter"
				android:layout_gravity="center_vertical"/>
			<TextView
				android:id="@+id/youtube_name"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/about_youtube_title"
				android:textSize="12sp"
				android:textColor="#000000"
				android:layout_gravity="center_vertical"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/twitter"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/twitter_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_about_twitter"
				android:scaleType="fitCenter"
				android:layout_gravity="center_vertical"/>
			<TextView
				android:id="@+id/twitter_name"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/about_twitter_title"
				android:textSize="12sp"
				android:textColor="#000000"
				android:layout_gravity="center_vertical"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/discord"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/discord_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_about_discord"
				android:scaleType="fitCenter"
				android:layout_gravity="center_vertical"/>
			<TextView
				android:id="@+id/discord_name"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/about_discord_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/github"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/github_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_about_github"
				android:scaleType="fitCenter"
				android:layout_gravity="center_vertical"/>
			<TextView
				android:id="@+id/github_name"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/about_github_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/line2"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#03A9F4"
			android:orientation="horizontal"/>
		<LinearLayout
			android:id="@+id/licenses"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/licenses_name"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/about_licenses_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/privacy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/privacy_name"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/about_policy_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<TextView
			android:id="@+id/version"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/about_build_version"
			android:textSize="10sp"
			android:textColor="#000000"
			android:alpha="0.7"/>
	</LinearLayout>
</LinearLayout>
