<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:orientation="vertical">
		<TextView
			android:id="@+id/title"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/song_opts_title"
			android:textSize="18sp"
			android:textColor="#03A9F4"/>
		<LinearLayout
			android:id="@+id/line"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#03A9F4"
			android:orientation="horizontal"/>
		<LinearLayout
			android:id="@+id/aAA"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<androidx.cardview.widget.CardView
				android:id="@+id/corneredView"
				android:layout_width="50dp"
				android:layout_height="55dp"
				android:gravity="center_vertical"
				app:cardCornerRadius="8dp">
				<ImageView
					android:id="@+id/albumArt"
					android:focusable="false"
					android:layout_width="50dp"
					android:layout_height="55dp"
					android:src="@drawable/ic_media_album_art"
					android:scaleType="fitCenter"
					android:layout_gravity="center_vertical"/>
			</androidx.cardview.widget.CardView>
			<LinearLayout
				android:id="@+id/a"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_weight="1">
				<TextView
					android:id="@+id/songTitle"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:text="@string/song_title_null"
					android:textSize="18sp"
					android:textColor="#2196F3"
					android:singleLine="true"/>
				<TextView
					android:id="@+id/songArtist"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="8dp"
					android:text="@string/song_artist_null"
					android:textSize="11sp"
					android:textColor="#000000"
					android:singleLine="true"
					android:alpha="0.5"/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/rename"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/rename_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_menu_rename"
				android:scaleType="fitCenter"/>
			<TextView
				android:id="@+id/rename_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_rename_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/lyrics"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/lyrics_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_lyrics"
				android:scaleType="fitCenter"/>
			<TextView
				android:id="@+id/lyrics_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_lyrics_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/share"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/share_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_menu_share"
				android:scaleType="fitCenter"/>
			<TextView
				android:id="@+id/share_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_share_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/moreInformation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/moreInformation_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_menu_info"
				android:scaleType="fitCenter"/>
			<TextView
				android:id="@+id/moreInformation_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_more_info_title"
				android:textSize="12sp"
				android:textColor="#000000"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/remove"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/remove_icon"
				android:focusable="false"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_menu_remove"
				android:scaleType="fitCenter"/>
			<TextView
				android:id="@+id/remove_title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/song_opts_remove_title"
				android:textSize="12sp"
				android:textColor="#F44336"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
